<resources>
    <string name="app_name">GeoCacheExploreAndroidApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Geocaching Explore</string>
    <string name="view_caches_list">View Caches List</string>
    <string name="discover_caches_in_map">Discover Caches in Map</string>
    <string name="logo_description">Geocaching Explore Application Logo</string>
    <string name="add_geocache">Add New Geocache</string>
    <string name="cache_name">Cache Name</string>
    <string name="cache_description">Cache Description</string>
    <string name="cache_location">Cache Location</string>
    <string name="back_to_landing_page">Home</string>
    <string name="address_hint">Address</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="back_to_list">Back to List</string>
    <string name="back_to_details">Back to Details</string>
    <string name="view_on_map">View on Map</string>
    <string name="app_logo" />
</resources>